--- a/index.html
+++ b/index.html
@@ -3,35 +3,165 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet/less" href="less/style.less">
 
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+  <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+  <script src="js/vendor/less.js" type="text/javascript"></script>
+</head>
+<body id="home">
+  <!--[if lt IE 7]>
+  <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+  <![endif]-->
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div class="drawing-container">
+    <img class="drawing" src="img/background.png">
+  </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+  <div class="container">
 
-        <script src="js/main.js"></script>
+    <!-- Navbar -->
+    <div class="row">
+      <div class="col-lg-11">
+        <header class="navbar navbar-wide" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand navbar-stamp" href="/"></a>
+            <a class="navbar-brand navbar-logo" href="/"></a>
+            <a class="navbar-brand navbar-subtitle" href="/"></a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="#"><div class="cht">馬金虎</div><div class="eng">Jinhu Ma</div></a></li>
+              <li><a href="#"><div class="cht">作品集</div><div class="eng">Artworks</div></a></li>
+              <li><a href="#"><div class="cht">最新消息</div><div class="eng">News</div></a></li>
+              <li><a href="#"><div class="cht">聯絡我們</div><div class="eng">Contact</div></a></li>
+            </ul>
+          </div>
+        </div>
+        </header>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-lg-3">
 
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
+        <!-- Profile picture -->
+        <div class="profile-pic-container">
+          <figure class="profile-pic">
+            <img src="img/profile-pic.jpg" alt="Jinhu Ma">
+            <figurecaption></figurecaption>
+          </figure>
+        </div>
+
+      </div>
+      <div class="col-lg-8">
+
+        <!-- Bio -->
+        <div class="bio-container">
+          <section class="bio cht">
+            <h1>藝術家馬金虎</h1>
+            <p>
+            馬金虎，男，1950年4月生，原濟南市政協委員、
+            民進濟南市委常委。現為美國紐英倫藝術學會
+            顧問、中國國際名人藝術家聯合會理事、中國書
+            畫家協會理事、山東省國際經濟文化發展中心秘
+            書長，山東畫院特聘畫師，山東開明書畫院副秘
+            書長、濟南市華夏文化促進會常務理事。
+            </p>
+            <p>
+            作品多次參加各級美展並獲獎，在多家刊物發表
+            並作為禮品赴日本、韓國、澳大利亞等國進行交
+            流。2010 年 10 月至 2011 年 5 月赴美國開展
+            了一系列的藝術交流活動，在橋水州立大學、哈
+            佛大學醫學院及廣教中文學校、英格蘭家長協會
+            舉辦講座並現場作畫，為廣教中文學校和亞美聯
+            誼會等捐拍書畫作品，在波士頓、紐約舉辦個人
+            書畫展，並向陳香梅、馬英九贈送畫作。美國世
+            界日報、星島日報、僑報、波士頓新聞報、僑報
+            周末、多維時報、台山人在美國等多家報刊多次
+            採訪並進行了多角度的介紹。藝術上積極探索、
+            追求博採眾長，信奉勤能補拙。作品清新典雅，
+            既注重深厚的傳統功力，又努力形成獨特的藝術
+            風格。熱心公益事業，積極從事各種文化藝術事
+            業的交流活動。
+            </p>
+          </section>
+
+          <section class="bio eng">
+            <h1>Jinhu Ma</h1>
+            <p>
+            Born in Jinan in 1950, 
+            Jin Hu Ma began to paint at eight and developed his skills under 
+            his teachers, Jin Don Mi and Yan Xin Yi, both famous artists in 
+            China. 
+            He served as a People's Political Consultative Conference Member 
+            of Jinan, was a member of the Standing Committee of the China 
+            Association for Promoting Democracy of Jinan, and was a Deputy 
+            Researcher of Sports Health and Arts of the Bureau of Education 
+            of Jinan. 
+            He is now serving as an honored trustee of the New England 
+            Institute of Art, and received an honorary degree from the
+            American Pulinton University in 2013. 
+            Jin Hu's Paintings have been shown at several city, province, 
+            and country level art exhibitionsand are treasured by collectors 
+            from countriesaround the world including Korea, Japan and 
+            Australia. 
+            Jin Hu Ma organized and participated in a series of artistic 
+            activities in the United States from October 2010 to May 2011. 
+            He led seminars and demonstrated painting at Bridgewater State 
+            University, Harvard Medical School, KwongKow Chinese School, 
+            and the New England Association of Parents. 
+            He has held personal painting and calligraphy exhibitions in 
+            Boston and New York, and his paintings have been presented to 
+            Xiangmei Chen and Yingjiu Ma as gifts. 
+            His activities in America were thoroughly reported by the U.S 
+            World Journal, Sing Tao Daily, USQiaobao, Boston News, Duowei 
+            Times, Taishanese in America and several other media sources. 
+            Jin Hu Ma has wide interests in painting, believes that diligence 
+            is the cure for dullness, and actively explores and absorbs new 
+            painting techniques.
+            By and by, these accumulations from various sources inform his 
+            fresh painting style.
+            His original and elegant work reflects not only his profound 
+            traditional skill, but also his unique artistic sense.
+            Enthusiastic about public welfare, he actively engages in 
+            various artistic and cultural exchanges and is an enthusiastic 
+            participant in charity and cultural communications. 
+            </p>
+          </section>
+        </div>
+
+      </div>
+    </div>
+
+    <footer>
+    </footer>
+
+  </div>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+
+  <script src="js/main.js"></script>
+
+  <script>
+    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src='//www.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g,s)}(document,'script'));
+  </script>
+</body>
 </html>
