Add footer and faux underline style (in progress).

--- a/index.html
+++ b/index.html
@@ -30,27 +30,28 @@
     <div class="row">
       <div class="col-lg-11">
         <header class="navbar navbar-wide" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand navbar-stamp" href="/"></a>
-            <a class="navbar-brand navbar-logo" href="/"></a>
-            <a class="navbar-brand navbar-subtitle" href="/"></a>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand navbar-stamp" href="/"></a>
+              <a class="navbar-brand navbar-logo" href="/"></a>
+              <a class="navbar-brand navbar-subtitle" href="/"></a>
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#" class="faux-underline-hover"><div class="cht">馬金虎</div><div class="eng">Jinhu Ma</div></a>
+                </li>
+                <li><a href="#" class="faux-underline-hover"><div class="cht">作品集</div><div class="eng">Artworks</div></a></li>
+                <li><a href="#" class="faux-underline-hover"><div class="cht">最新消息</div><div class="eng">News</div></a></li>
+                <li><a href="#" class="faux-underline-hover"><div class="cht">聯絡我們</div><div class="eng">Contact</div></a></li>
+              </ul>
+            </div>
           </div>
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="#"><div class="cht">馬金虎</div><div class="eng">Jinhu Ma</div></a></li>
-              <li><a href="#"><div class="cht">作品集</div><div class="eng">Artworks</div></a></li>
-              <li><a href="#"><div class="cht">最新消息</div><div class="eng">News</div></a></li>
-              <li><a href="#"><div class="cht">聯絡我們</div><div class="eng">Contact</div></a></li>
-            </ul>
-          </div>
-        </div>
         </header>
       </div>
     </div>
@@ -146,9 +147,13 @@
 
       </div>
     </div>
-
-    <footer>
-    </footer>
+    <div class="row">
+      <div class="col-lg-11">
+        <footer class="footer">
+        &copy; 2014. All rights reserved.
+        </footer>
+      </div>
+    </div>
 
   </div>
 
