Basic version of the artworks page.

--- a/artworks.html
+++ b/artworks.html
@@ -20,7 +20,43 @@
   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   <![endif]-->
 
-  <div class="container">
+  <div class="container vertical">
+
+    <!-- Navbar -->
+    <div class="row">
+      <div class="col-lg-11">
+        <header class="navbar" role="navigation">
+          <div class="navbar-header">
+            <a class="navbar-brand navbar-stamp" href="/"></a>
+          </div>
+          <nav class="nav-main">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#" class="faux-underline-hover"><div class="cht">馬金虎</div><div class="eng">Jinhu Ma</div></a>
+              </li>
+              <li><a href="#" class="faux-underline-hover"><div class="cht">作品集</div><div class="eng">Artworks</div></a></li>
+              <li><a href="#" class="faux-underline-hover"><div class="cht">最新消息</div><div class="eng">News</div></a></li>
+              <li><a href="#" class="faux-underline-hover"><div class="cht">聯絡我們</div><div class="eng">Contact</div></a></li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-11">
+        <nav class="nav-artworks-filter">
+          <ul class="nav navbar-nav">
+            <li><h1><div class="cht">梅</div><div class="eng">Plum</div></h1></li>
+            <li><div class="cht">蘭</div><div>Plum</div></li>
+            <li><div class="cht">竹</div><div>Plum</div></li>
+            <li><div class="cht">菊</div><div>Plum</div></li>
+            <li><div class="cht">紫藤</div><div>Plum</div></li>
+            <li><div class="cht">牡丹</div><div>Plum</div></li>
+            <li><div class="cht">全</div><div>Plum</div></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
     <div id="gallery" class="black-ink-gallery">
       <div class="big-inner">
