Two rows layout.

--- a/artworks.html
+++ b/artworks.html
@@ -161,33 +161,33 @@
         </div>
 
         <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-10.jpg" alt=""></a>
-          </figure>
-        </div>
+          <div class="big-figure-row">
+            <figure class="big-figure">
+              <figurecaption class="big-figurecaption">
+                <div class="artwork-name">黃花過時有餘香</div>
+                <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
+              </figurecaption>
+              <a href="#"><img src="img/artwork-13.jpg" alt=""></a>
+            </figure>
+          </div>
+          
+          <div class="big-figure-row">
+            <figure class="big-figure">
+              <figurecaption class="big-figurecaption">
+                <div class="artwork-name">黃花過時有餘香</div>
+                <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
+              </figurecaption>
+              <a href="#"><img src="img/artwork-10.jpg" alt=""></a>
+            </figure>
 
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-13.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-14.jpg" alt=""></a>
-          </figure>
+            <figure class="big-figure">
+              <figurecaption class="big-figurecaption">
+                <div class="artwork-name">黃花過時有餘香</div>
+                <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
+              </figurecaption>
+              <a href="#"><img src="img/artwork-14.jpg" alt=""></a>
+            </figure>
+          </div>
         </div>
 
         <div class="big-figure-column">
