Basic version of horizontal scrolling artworks page.

--- a/artworks.html
+++ b/artworks.html
@@ -43,18 +43,22 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-11">
+      <div class="col-lg-11 nav-artworks-filter-container">
         <nav class="nav-artworks-filter">
           <ul class="nav navbar-nav">
             <li><h1><div class="cht">梅</div><div class="eng">Plum</div></h1></li>
-            <li><div class="cht">蘭</div><div>Plum</div></li>
-            <li><div class="cht">竹</div><div>Plum</div></li>
-            <li><div class="cht">菊</div><div>Plum</div></li>
-            <li><div class="cht">紫藤</div><div>Plum</div></li>
-            <li><div class="cht">牡丹</div><div>Plum</div></li>
-            <li><div class="cht">全</div><div>Plum</div></li>
+            <li><a href="#"><div class="cht">蘭</div><div>Orchids</div></a></li>
+            <li><a href="#"><div class="cht">竹</div><div>Bamboo</div></a></li>
+            <li><a href="#"><div class="cht">菊</div><div>Mums</div></a></li>
+            <li><a href="#"><div class="cht">紫藤</div><div>Wisteria</div></a></li>
+            <li><a href="#"><div class="cht">牡丹</div><div>Peony</div></a></li>
+            <li><a href="#"><div class="cht">全</div><div>All</div></a></li>
           </ul>
         </nav>
+        <div class="scroll-button">
+          <a href="#">&lt;</a>
+          <a href="#">&gt;</a>
+        </div>
       </div>
     </div>
 
