--- a/artworks.html
+++ b/artworks.html
@@ -233,8 +233,8 @@
   <script>
     //$('#gallery').blackInkGallery();
     if ($('body')[0].style["-webkit-writing-mode"] != undefined) {
-      //$('#artworks > .container').addClass('vertical-rl');
-      //$('#gallery').removeClass('vertical').addClass('horizontal');
+      $('#artworks > .container').addClass('vertical-rl');
+      $('#gallery').removeClass('vertical').addClass('horizontal');
     }
   </script>
 
