--- a/artworks.html
+++ b/artworks.html
@@ -62,6 +62,7 @@
       </div>
     </div>
 
+    <!-- Example Black Ink Gallery mock ups
     <div id="gallery" class="black-ink-gallery vertical">
       <div class="big-inner">
         <div class="big-figure-column">
@@ -73,147 +74,26 @@
             <a href="#"><img src="img/artwork-01.jpg" alt=""></a>
           </figure>
         </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-15.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-16.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-17.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-18.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-02.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-03.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-04.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-08.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-09.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <div class="big-figure-row">
-            <figure class="big-figure">
-              <figurecaption class="big-figurecaption">
-                <div class="artwork-name">黃花過時有餘香</div>
-                <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-              </figurecaption>
-              <a href="#"><img src="img/artwork-13.jpg" alt=""></a>
-            </figure>
-          </div>
-          
-          <div class="big-figure-row">
-            <figure class="big-figure">
-              <figurecaption class="big-figurecaption">
-                <div class="artwork-name">黃花過時有餘香</div>
-                <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-              </figurecaption>
-              <a href="#"><img src="img/artwork-10.jpg" alt=""></a>
-            </figure>
-
-            <figure class="big-figure">
-              <figurecaption class="big-figurecaption">
-                <div class="artwork-name">黃花過時有餘香</div>
-                <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-              </figurecaption>
-              <a href="#"><img src="img/artwork-14.jpg" alt=""></a>
-            </figure>
-          </div>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-11.jpg" alt=""></a>
-          </figure>
-        </div>
-
-        <div class="big-figure-column">
-          <figure class="big-figure">
-            <figurecaption class="big-figurecaption">
-              <div class="artwork-name">黃花過時有餘香</div>
-              <div class="artwork-meta">2011 年作品 長 120cm 寬 45cm</div>
-            </figurecaption>
-            <a href="#"><img src="img/artwork-12.jpg" alt=""></a>
-          </figure>
-        </div>
       </div>
+    </div>
+    -->
+
+    <div id="gallery">
+      <a href="#"><img src="img/artwork-01.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-15.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-16.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-17.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-18.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-02.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-03.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-04.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-08.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-09.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-13.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-10.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-14.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-11.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
+      <a href="#"><img src="img/artwork-12.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
     </div>
 
     <div class="row">
@@ -231,10 +111,10 @@
 
   <script src="js/black-ink-gallery.js"></script>
   <script>
-    //$('#gallery').blackInkGallery();
+    $('#gallery').blackInkGallery();
+
     if ($('body')[0].style["-webkit-writing-mode"] != undefined) {
       $('#artworks > .container').addClass('vertical-rl');
-      $('#gallery').removeClass('vertical').addClass('horizontal');
     }
   </script>
 
