--- a/artworks.html
+++ b/artworks.html
@@ -78,7 +78,7 @@
     </div>
     -->
 
-    <div id="gallery">
+    <div id="gallery" class="black-ink-gallery">
       <a href="#"><img src="img/artwork-01.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
       <a href="#"><img src="img/artwork-15.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
       <a href="#"><img src="img/artwork-16.jpg" alt="" data-caption='{"artwork-name": "黃花過時有餘香", "artwork-meta": "2011 年作品 長 120cm 寬 45cm"}'></a>
