--- a/artworks.html
+++ b/artworks.html
@@ -12,10 +12,9 @@
   <meta name="viewport" content="width=device-width">
   -->
 
-  <link rel="stylesheet/less" href="less/style.less">
+  <link rel="stylesheet" href="css/bundle.min.css">
 
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-  <script src="js/vendor/less.js" type="text/javascript"></script>
 </head>
 <body id="artworks">
   <!--[if lt IE 7]>
@@ -139,7 +138,7 @@
     });
   </script>
 
-  <script src="js/main.js"></script>
+  <script src="js/bundle.min.js"></script>
 
   <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
