--- a/artwork_left.html
+++ b/artwork_left.html
@@ -77,9 +77,9 @@
         <div class="header-container">
           <h1>黃花過時有餘香</h1>
           <ol class="artwork-sharing list-unstyled list-inline">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Pinterest</a></li>
+            <li><a href="#" class="icon-facebook"></a></li>
+            <li><a href="#" class="icon-twitter"></a></li>
+            <li><a href="#" class="icon-pinterest"></a></li>
           </ol>
         </div>
       </div>
@@ -134,6 +134,7 @@
           </section>
 
           <div class="artwork-comments">
+            <h2>留言討論</h2>
             <div id="disqus_thread"></div>
             <script type="text/javascript">
               var disqus_shortname = 'majinhu';
