Front-end changes.

--- a/artwork_left.html
+++ b/artwork_left.html
@@ -27,13 +27,13 @@
 
   <div class="container artwork-layout-container">
 
-    <div class="artwork-image-left-container">
+    <div class="artwork-image-container">
       <figure class="artwork-image">
         <img src="img/artwork-15.jpg">
       </figure>
     </div>
 
-    <div class="artwork-details-right-container">
+    <div class="artwork-content-container">
       <div class="row">
         <div class="header-container">
           <header class="navbar navbar-wide" role="navigation">
@@ -74,7 +74,7 @@
       </div>
 
       <div class="row">
-        <div class="header-container">
+        <div class="artwork-heading-container">
           <h1>黃花過時有餘香</h1>
           <ol class="artwork-sharing list-unstyled list-inline">
             <li><a href="#" class="icon-facebook"></a></li>
