--- a/artwork_left.html
+++ b/artwork_left.html
@@ -27,41 +27,39 @@
 
   <div class="container artwork-layout-container">
 
-    <div class="artwork-image-container">
+    <div class="artwork-image-container-top">
       <figure class="artwork-image">
-        <img src="img/artwork-15.jpg">
+        <img src="img/artwork-13.jpg">
       </figure>
     </div>
 
-    <div class="artwork-content-container">
-      <div class="row">
-        <div class="header-container">
-          <header class="navbar navbar-wide" role="navigation">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <a class="navbar-brand navbar-stamp" href="/"></a>
-                <a class="navbar-brand navbar-logo" href="/"></a>
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-              </div>
-              <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="#" class="faux-underline-hover"><div class="cht">馬金虎</div><div class="eng">Jinhu Ma</div></a>
-                  </li>
-                  <li><a href="#" class="faux-underline-hover"><div class="cht">作品集</div><div class="eng">Artworks</div></a></li>
-                  <li><a href="#" class="faux-underline-hover"><div class="cht">最新消息</div><div class="eng">News</div></a></li>
-                  <li><a href="#" class="faux-underline-hover"><div class="cht">聯絡我們</div><div class="eng">Contact</div></a></li>
-                </ul>
-              </div>
-            </div>
-          </header>
+    <div class="header-container">
+      <header class="navbar navbar-wide" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand navbar-stamp" href="/"></a>
+            <a class="navbar-brand navbar-logo" href="/"></a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="#" class="faux-underline-hover"><div class="cht">馬金虎</div><div class="eng">Jinhu Ma</div></a>
+              </li>
+              <li><a href="#" class="faux-underline-hover"><div>作品集</div><div>Artworks</div></a></li>
+              <li><a href="#" class="faux-underline-hover"><div>最新消息</div><div>News</div></a></li>
+              <li><a href="#" class="faux-underline-hover"><div>聯絡我們</div><div>Contact</div></a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-
+      </header>
+    </div>
+    
+    <div class="artwork-content-container-bottom">
       <div class="row">
         <div class="breadcrumbs-container">
           <ol class="breadcrumb">
