Apply layout styles according to image dimension.

--- a/artwork_left.html
+++ b/artwork_left.html
@@ -27,13 +27,13 @@
 
   <div class="container artwork-layout-container">
 
-    <div class="artwork-image-container-top">
+    <div class="artwork-image-container-left">
       <figure class="artwork-image">
-        <img src="img/artwork-13.jpg">
+        <img src="img/artwork-15.jpg">
       </figure>
     </div>
 
-    <div class="header-container">
+    <div class="header-container-right">
       <header class="navbar navbar-wide" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -59,7 +59,7 @@
       </header>
     </div>
     
-    <div class="artwork-content-container-bottom">
+    <div class="artwork-content-container-right">
       <div class="row">
         <div class="breadcrumbs-container">
           <ol class="breadcrumb">
