--- a/artwork.html
+++ b/artwork.html
@@ -152,7 +152,7 @@
     </div>
     
     <div class="row">
-      <div class="col-lg-12">
+      <div class="footer-container">
         <footer class="footer">
         &copy; 2014. All rights reserved.
         </footer>
