--- a/artwork.html
+++ b/artwork.html
@@ -8,15 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
   <meta name="description" content="">
-  <!--
   <meta name="viewport" content="width=device-width">
-  -->
 
-  <!--
   <link rel="stylesheet" href="css/bundle.min.css">
-  -->
-  <link rel="stylesheet/less" type="text/css" href="less/style.less" />
-  <script src="js/vendor/less.js" type="text/javascript"></script>
 
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -33,7 +27,7 @@
       </figure>
     </div>
 
-    <div class="header-container-right">
+    <div class="header-container header-container-right">
       <header class="navbar navbar-wide" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
